Fix overlapping issue caused by negative margin on contact area

--- a/css/main.css
+++ b/css/main.css
@@ -9793,12 +9793,12 @@ input:focus-visible {
 }
 
 .contact-four-area {
-    margin-block-start: -460px;
+    margin-block-start: 0px;
 }
 
 @media screen and (max-width: 767px) {
     .contact-four-area {
-        margin-block-start: -50px;
+        margin-block-start: 0px;
     }
 }
 
